2014-06-24 P. Nef: trunk
	* initial commit of package