@@ -8,8 +8,8 @@
 
 
 #include "TNamed.h"
-#include "TFile.h"
 #include "TString.h"
+#include "TFile.h"
 #include "TH2F.h"
 #include <iostream>
 #include <vector>
@@ -28,13 +28,13 @@ class JetVertexTagger : public TNamed{
     public:
 
         // constructor
+        JetVertexTagger();
         JetVertexTagger(const float &jvt_cut, const TString filein);
         // destructor
         ~JetVertexTagger();
 
         // init method: call this for each new event
-        void init(const std::vector<float> &trk_pt, const std::vector<float> &trk_z0_wrtPV, 
-                  const std::vector<std::vector<int> > &vxp_trk_index);
+        void init(const std::vector<float> &trk_pt, const std::vector<float> &trk_z0_wrtPV, const std::vector<std::vector<int> > &vxp_trk_index);
 
         // actual worker
         bool operator()(const float jet_pt, const std::vector<int> assoc_trk_indices);
@@ -49,9 +49,6 @@ class JetVertexTagger : public TNamed{
         float JVT()    {return JVT_;}
         float RpT()    {return RpT_;}
 
-        #ifdef JETVERTEXTAGGER_STANDALONE
-        ClassDef(JetVertexTagger,1);
-        #endif
 
     private: 
         bool                    debug_;
@@ -70,22 +67,34 @@ class JetVertexTagger : public TNamed{
         // consts
         const float k_z0_cut_;
         const float k_corrJVF_scale_fact_;
-
+        
+        #ifdef JETVERTEXTAGGER_STANDALONE
+        ClassDef(JetVertexTagger,1);
+        #endif
 };
 
+#endif
 
 //----------------------------------------------------
 /// \class JVTTrack
 /// Helper class for tracks used in JetVertexTagger
 //----------------------------------------------------
-class JVTTrack {
+#ifndef _JVTTrack_
+#define _JVTTrack_
+
+#include "TNamed.h"
+class JVTTrack : public TNamed  {
     public:
+        JVTTrack()                        : pt_(0) ,   z0_wrtPV_(-9999),    origin_(-1){};
         JVTTrack(float pt, float z0_wrtPV): pt_(pt) ,  z0_wrtPV_(z0_wrtPV), origin_(-1){};
 
         float pt_;
         float z0_wrtPV_;
         float origin_;
+        
+        #ifdef JETVERTEXTAGGER_STANDALONE
+        ClassDef(JVTTrack,1);
+        #endif
 };
-
 #endif
 
